--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "dotenv": "^16.3.1",
     "esbuild": "^0.19.2",
     "esbuild-plugin-fileloc": "^0.0.6",
-    "html-creator": "^0.7.1",
-    "typescript": "^5.2.2",
-    "xss": "^1.0.14"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "prisma": "^5.2.0",
